--- a/site/content/work/.md
+++ b/site/content/work/.md
@@ -1,7 +1,13 @@
 ---
-inPageTitle: " "
+inPageTitle: Baked Stories - Luca Beradino
 date: 2021-08-19T10:43:29.213Z
-title: " "
-description: " "
+title: " Baked Stories - Luca Beradino |"
+description: The first in our Baked Stories series featuring long time friend
+  and chef Luca Beradino. In this short story we talk with Luca about what
+  drives him and what cooking means to him.
+tags:
+  - Live Action
 image: img/main_edit_cal_colour.00_02_24_11.still033.png
+carousel:
+  - video: https://vimeo.com/586854918
 ---
