--- a/site/content/work/.md
+++ b/site/content/work/.md
@@ -19,4 +19,5 @@ sections:
       With Italian and French lineage, food is well and truly embedded into Luca's DNA. It's those food memories throughout life that he's pulled inspiration from that have inspired 'Andria', his new restaurant based in Dartmouth Devon.
 carousel:
   - video: https://vimeo.com/586854918
+  - image: img/main_edit_cal_colour.00_02_24_11.still033.png
 ---
