--- a/site/content/work/.md
+++ b/site/content/work/.md
@@ -1,7 +1,7 @@
 ---
 inPageTitle: Baked Stories - Luca Beradino
 date: 2021-08-19T10:43:29.213Z
-title: " Baked Stories - Luca Beradino |"
+title: " Baked Stories - Luca Beradino"
 description: The first in our Baked Stories series featuring long time friend
   and chef Luca Beradino. In this short story we talk with Luca about what
   drives him and what cooking means to him.
